<resources>
    <string name="app_name">MegAlexa</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="wow_you_re_logged">Wow! You\'re logged!</string>
    <string name="logout">Logout</string>
    <string name="title_activity_logged_general">LoggedGeneralActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_general_logged">GeneralLoggedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="library">Library</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <string name="title_workflow">Your workflows</string>
    <string name="title_main">Your workflow</string>
    <string name="email_developer">zerosevenswe@gmail.com</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="title_create_workflow">Create your workflow</string>
    <string name="button_save_workflow">save your workflow</string>
    <string name="title_user_workflow">Insert your workflow name here</string>
    <string name="title_create_blocks"/>
    <string name="title_create_block">Add blocks</string>
    <string name="nav_account_title">Information</string>
    <string name="nav_management_title">Account</string>
    <string name="insert_url">Insert URL</string>
    <string name="save">Save</string>
    <string name="url">URL</string>
    <string name="Enter_your_Pin">Enter your Pin</string>
    <string name="Error_with_pin">Pin can\'t be null</string>
    <string name="add_feedrss">Add FeedRSS</string>
    <string name="add">Add</string>
    <string name="insert_url_hint">Insert url here</string>
    <string name="insert_text_here">Insert Text here</string>
    <string name="entertime">Enter time</string>
    <string name="dotpoint">:</string>
    <string name="setalarm">SET ALARM</string>
    <string name="slash">/</string>
    <string name="enterdate">Enter date</string>
    <string name="confirm">Confirm</string>
    <string name="selectnumber">Select filter number</string>
    <string name="inserttext">Insert Text To Speech paragraph</string>
    <string name="telephonenumber">Insert telephone number</string>
    <string name="selectsite">Select a news site</string>
    <string name="youraccount">Insert your Twitter account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="inserturl">Insert Youtube url</string>
    <string name="insert">add</string>
    <string name="cancel">Cancel</string>
    <string name="editTitle">Edit title</string>
    <string name="done">Done</string>
    <string name="inserttitle">Insert item</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="calcio">Calcio</string>
    <string name="selectnews">Select news for Sport</string>
    <string name="nfl">Football</string>
    <string name="tennis">Tennis</string>
    <string name="f1">Formula1</string>
    <string name="nba">Basket</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="bbc">BBC</string>
    <string name="googlenews">Google News</string>
    <string name="sky">SKY</string>
    <string name="cnbc">CNBC</string>
    <string name="wallstreet">Wall Street</string>
    <string name="ansa">Ansa</string>
    <string name="selectblockTwitter">Select a Twitter block</string>
    <string name="homeTwitter">Users Tweets</string>
    <string name="userTwitter">My tweets</string>
    <string name="searchHashtag">Search tweets for #</string>
    <string name="WriteTweet">Write a Tweet</string>
    <string name="inserttexttweet">Insert a new tweet through Alexa</string>
    <string name="textInsert">Insert your Twitter account</string>
    <string name="usernameormail">Username or mail</string>
    <string name="login">Login</string>
    <string name="es">ex. #picoftheday</string>
    <string name="ese">ex. @realDonaldTrump</string>
    <string name="listTitle">Create new List</string>
    <string name="confirmBlockList">Confirm</string>
    <string name="titleListItem">List</string>
    <string name="Select_site">Select News site</string>
    <string name="searchForUser">Search twees for user</string>
    <string name="listenMyTweet">Listen your tweets through Alexa</string>
    <string name="newyork">ex. New York</string>
    <string name="insertcity">Insert city</string>
    <string name="listenMail">Listen your emails through Alexa</string>
    <string name="listenTask">Listen your tasks through Alexa</string>
    <string name="selectblockGoogle">Select a Google block</string>
    <string name="listenCalendar">Listen your events through Alexa</string>
    <string name="Gmail">Gmail</string>
    <string name="Calendar">Calendar</string>
</resources>
