<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/colorSecondaryAccent"
              android:layout_height="wrap_content"
              android:layout_gravity="center">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/textInsert"
              tools:text="Insert your Twitter account"
              android:textSize="18sp"
              android:layout_gravity="center_horizontal"
              android:textStyle="bold"
              android:layout_marginTop="15dp"/>
    <EditText
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/usernameormail"
            android:id="@+id/editUsername"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"/>

    <EditText
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/editPassword"
            android:layout_gravity="center_horizontal"/>
    <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/login"
            tools:text="Save"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>
</LinearLayout>