<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <!-- <group android:checkableBehavior="single">
        <item android:id="@+id/menu_workflow"
              android:icon="@drawable/ic_squares"
              android:title="Workflows" />
        <item android:id="@+id/menu_profile"
              android:icon="@drawable/ic_account_circle_black_24dp"
              android:title="Profile" />
    </group>
    -->
    <item android:title="@string/nav_account_title">
        <menu>
            <item
                android:id="@+id/text_username"
                android:title="@string/todo"/>
            <item
                    android:id="@+id/text_lastname"
                    android:title="@string/todo"/>
            <item
                android:id="@+id/text_email"
                android:title="@string/todo"/>
        </menu>
    </item>

    <item android:title="@string/nav_management_title">
        <menu>
            <item
                    android:id="@+id/menu_quit"
                    android:icon="@drawable/ic_exit_to_app_black_24dp"
                    android:title="Exit"/>
        </menu>
    </item>

</menu>