<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/linear_layout"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center"
>

    <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_url"
            android:padding="5dp"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEditText"
            android:text="@string/url"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:id="@+id/editText" android:importantForAutofill="no"
            android:labelFor="@id/editText"
            tools:targetApi="o"/>
    <Button
            android:id="@+id/button_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"

            android:text="@string/save"
    />
</LinearLayout>
