<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/tts_fragment_container"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:padding="16dp"
              android:orientation="vertical"
              tools:openDrawer="start"
              android:background="@color/colorSecondaryAccent"
              android:gravity="start">

    <TextView
            android:id="@+id/insert_tts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:text="Insert Text To Speech paragraph"
            android:text="@string/inserttext"/>


    <EditText
            android:id="@+id/insert_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/insert_tts"
            android:layout_marginTop="8dp"
            android:singleLine="false"
            android:inputType="textMultiLine"
            android:lines="5"
            android:autofillHints=""
            tools:targetApi="o"
            android:hint="@string/insert_text_here"
    />

    <Button
            android:id="@+id/confirmItemBotton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
    />
</LinearLayout>


