<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:padding="16dp"
              android:background="@color/colorSecondaryAccent"
              android:gravity="start">
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation = "horizontal">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/searchForUser"
                  android:layout_gravity="center"
                  android:textStyle="bold"
                  android:textSize="15sp"
                  android:layout_marginStart="20dp"
                  android:textAlignment="center"/>

        <Button
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_filter"
                android:id="@+id/button_filter"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"/>
    </LinearLayout>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/twitter_anotherUser"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/ese"
            android:layout_marginBottom="20dp"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/twitter_confirm_button"
            tools:text="Confirm"
            android:layout_gravity="center"/>
</LinearLayout>