<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:gravity="start"
              android:orientation="vertical">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/editTitle"
              tools:text="Edit Title"
              android:textSize="18sp" android:layout_gravity="center_horizontal"
              android:layout_marginBottom="10dp"
              android:layout_marginTop="200dp"/>

    <EditText
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/editTitle" android:layout_gravity="center_horizontal"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/editBody"
              android:textSize="18sp" android:layout_gravity="center_horizontal" android:layout_marginTop="20dp"
              android:layout_marginBottom="10dp"/>
    <EditText
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/editBody"
            android:layout_gravity="center_horizontal"/>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/cancel" tools:text="Cancel"
                android:textAlignment="textEnd"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"/>

        <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/save"
                tools:text="Save"
                android:layout_gravity="end"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="35dp"/>
    </RelativeLayout>
</LinearLayout>