<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/rss_fragment_container"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:padding="16dp"
              android:orientation="vertical"
              tools:openDrawer="start"
              android:background="@color/colorSecondaryAccent"
              android:gravity="start">

    <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:labelFor="@+id/Url_News"
            android:textStyle="bold"
            android:text="@string/selectsite" tools:text="Select news site"
            android:padding="2dp"/>
    <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            card_view:cardCornerRadius="5dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="5dp">

            <TextView
                    android:id="@+id/BBC_News"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/bbc"
                    android:textColor="#616161"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            card_view:cardCornerRadius="5dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="5dp">

            <TextView
                    android:id="@+id/Sky_News"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/sky"
                    android:textColor="#616161"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            card_view:cardCornerRadius="5dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="5dp">

            <TextView
                    android:id="@+id/Google_News"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/googlenews"
                    android:textColor="#616161"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            card_view:cardCornerRadius="5dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="5dp">

            <TextView
                    android:id="@+id/Cnbc_News"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/cnbc"
                    android:textColor="#616161"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            card_view:cardCornerRadius="5dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="5dp">

            <TextView
                    android:id="@+id/Wallstreet_News"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/wallstreet"
                    android:textColor="#616161"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            card_view:cardCornerRadius="5dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="5dp">

            <TextView
                    android:id="@+id/Ansa_News"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/ansa"
                    android:textColor="#616161"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
